@@ -1,11 +1,10 @@
-{include "vippy/menu"}
-
 <div class="content">
-	<h1>About VIPPY</h1>
+	<h1 style="margin-bottom: 0;">About VIPPY</h1>
 </div>
 
-<div id="aboutVippy">
+{include "vippy/menu"}
 
+<div id="aboutVippy">
 	<div class="content">
 		<div class="col2">
 			<img src="/images/discord-vippy.png">
@@ -36,7 +35,7 @@
 			</p>
 			<p>
 				Need help? Have questions?
-				Please don't hesitate to contact <a href="https://gate.eveonline.com/profile/bloemkoolsaus" target="_blank">Bloemkoolsaus</a>!
+				Please don't hesitate to <a href="/vippy/contant">contact</a> me!
 			</p>
 		</div>
 		<div style="clear:both;"></div>
