@@ -1,0 +1,58 @@
+
+<div class="content">
+	<h1 style="margin-bottom: 0;">
+		<img src="/modules/vippy/images/info.png" align="left">
+		About VIPPY: Contact
+	</h1>
+</div>
+
+{include "vippy/menu"}
+
+
+<div id="aboutVippy">
+	<div class="content">
+		<div class="col6">
+			<div>
+				<p>
+					Need help?<br />
+					Have questions?<br />
+					Please don't hesitate to contact <a href="https://gate.eveonline.com/profile/bloemkoolsaus" target="_blank">Bloemkoolsaus</a>!
+				</p>
+			</div>
+			<div style="margin-top: 2em;">
+				<h3>Ingame</h3>
+				<p>
+					You can contact me ingame, via eve-mail or via direct convo (if i'm on) on
+					<a href="https://gate.eveonline.com/profile/bloemkoolsaus" target="_blank">Bloemkoolsaus</a>
+				</p>
+			</div>
+			<div style="margin-top: 2em;">
+				<h3>Discord</h3>
+				<p>
+					You can also contact me via a Vippy discord server that i've set up.<br />
+					Join via this link: <a href="https://discord.gg/cqQEaFB" target="_blank">https://discord.gg/cqQEaFB</a>
+				</p>
+				<p>
+					Please note that anyone can join this server. Be carefull with sharing your intel.<br />
+					If you do not want others to know you're using Vippy, don't join the discord.
+				</p>
+			</div>
+		</div>
+		<div class="col6 right last">
+			<div class="standout">
+				<h3 style="padding: 0; margin: 0;">DISCLAMER</h3>
+				<div style="padding: .5em;">
+					Whenever you do contact me, I will try my best to respond as quickly as possible.
+				</div>
+				<div style="padding: .5em;">
+					However, please keep in mind that I have a job, a household, a RL <strong>and</strong> a corporation to run.
+					It may take me some time to reply.
+				</div>
+				<div style="padding: .5em;">
+					Your odds of getting quick reply are better if you use Discord though, as I'm able to use discord while at work :)
+				</div>
+			</div>
+		</div>
+	<div style="clear:both;"></div>
+	</div>
+</div>
