@@ -1,12 +1,13 @@
-{include "vippy/menu"}
-
 <div class="content">
-	<h1>VIPPY Costs & Subscription</h1>
+	<h1 style="margin-bottom: 0;">
+		<img src="/modules/vippy/images/info.png" align="left">
+		About VIPPY: Subscription & Costs
+	</h1>
 </div>
 
+{include "vippy/menu"}
 
 <div id="aboutVippy">
-
 	<div class="content">
 		<div>
 			Vippy is not free to run. Find out all about what vippy will cost you, here.
