@@ -1,22 +1,25 @@
-{include "vippy/menu"}
-
 <div class="content">
-	<h1>VIPPY Features</h1>
+	<h1 style="margin-bottom: 0;">
+		<img src="/modules/vippy/images/info.png" align="left">
+		About VIPPY: Features
+	</h1>
 </div>
+
+{include "vippy/menu"}
 
 <div id="aboutVippy">
 
 	<div class="content">
 		<div>
 			VIPPY is the most comprehensive and powerfull wormhole space mappers around.
-			Here's (very brief) overview of VIPPY's most important features.
+			Here is a (very brief) overview of VIPPY's most important features.
 		</div>
 	</div>
 
 	<div class="content features">
 		<h3>A detailed map of the current chain</h3>
 		<div class="col7">
-			<img src="/modules/vippy/images/map.png" align="left">
+			<img src="/modules/vippy/images/screenshots/map.png" align="left">
 		</div>
 		<div class="col5 right last">
 			<div style="color: #ffffff;">
@@ -30,17 +33,21 @@
 				<li>System static(s)</li>
 				<li>Connection status</li>
 				<li>Wormhole effect</li>
-				<li>Who inhabites this system<br />
-					<ul><li><i>You can edit this list</i></li></ul>
+				<li>Mark known systems<br />
+					<ul><li><i>Who lives there, for exemple</i></li></ul>
+				</li>
+				<li>Mark drifter battleship presence</li>
 				<li>If k-space, distance to nearest tradehub<br />
-					<ul><li><i>or other system of interest you can set</i></li></ul>
+					<ul><li><i>or other system of interest you set</i></li></ul>
+				</li>
 				<li>
-					Character tracking:
+					Character & Fleet tracking:
 					<ul>
 						<li>See who is in the chain, and where</li>
 						<li>Automatically add systems while you jump</li>
 					</ul>
 				</li>
+				<li>Broadcast rally points</li>
 				<li>And much, much more</li>
 			</ul>
 		</div>
@@ -54,7 +61,7 @@
 				Detailed information about a wspace system.
 			</div>
 			<div style="margin-top: 1.5em;">
-				<img src="/modules/vippy/images/system-intel-wspace.png">
+				<img src="/modules/vippy/images/screenshots/system-intel-wspace.png">
 			</div>
 		</div>
 		<div class="col6 right last">
@@ -62,7 +69,7 @@
 				Detailed information about a kspace system.
 			</div>
 			<div style="margin-top: 1.5em;">
-				<img src="/modules/vippy/images/system-intel-kspace.png">
+				<img src="/modules/vippy/images/screenshots/system-intel-kspace.png">
 			</div>
 		</div>
 		<div style="clear:both;"></div>
@@ -75,7 +82,7 @@
 				Detailed information and jump log about a wormhole. This provides you with invaluable information when for exemple you're trying to roll a used wormhole.
 			</div>
 			<div style="margin-top: 1.5em;">
-				<img src="/modules/vippy/images/jumplog.png" align="left">
+				<img src="/modules/vippy/images/screenshots/jumplog.png" align="left">
 			</div>
 		</div>
 		<div class="col6 right last">
@@ -84,7 +91,7 @@
 				Quickly find the closest entrance or exit from a certain kspace system!
 			</div>
 			<div style="margin-top: 1.5em;">
-				<img src="/modules/vippy/images/exit-finder.png" align="left">
+				<img src="/modules/vippy/images/screenshots/exit-finder.png" align="left">
 			</div>
 		</div>
 		<div style="clear:both;"></div>
@@ -98,7 +105,7 @@
 			<i>Think about all those alt characters, or those special snowflakes that refuse to register themselves for your mapper.</i>
 		</div>
 		<div style="margin-top: 1.5em;">
-			<img src="/modules/vippy/images/crest-support.png" align="left">
+			<img src="/modules/vippy/images/screenshots/crest-support.png" align="left">
 		</div>
 		<div style="clear:both;"></div>
 	</div>
