@@ -1,26 +1,36 @@
-{if !$App->user}
-<div id="header">
-	<div id="headercontainer">
-		<div id="menucontainer">
-			<div id="mainmenu">
-				<ul class="mainmenu">
-					<li class="mainmenu first">
-						<a href="/" title="About">VIPPY</a>
-					</li>
-					<li class="mainmenu">
-						<a href="/vippy/about" title="About">ABOUT</a>
-					</li>
-					<li class="mainmenu">
-						<a href="/vippy/features" title="Features">FEATURES</a>
-					</li>
-					<li class="mainmenu">
-						<a href="/vippy/costs" title="Subscription costs">COSTS</a>
-					</li>
-				</ul>
-				<div class="clear"></div>
-			</div>
-			<div class="clear"></div>
-		</div>
+<div class="content">
+	<div class="tabs">
+		<ul>
+		{if !isset($App->user)}
+			<li class="mainmenu first">
+				<a href="/" title="VIPPY">VIPPY</a>
+			</li>
+		{/if}
+			<li class="mainmenu">
+				<a href="/vippy/about" title="About">
+					<img src="/modules/vippy/images/info.png" align="left">
+					About
+				</a>
+			</li>
+			<li class="mainmenu">
+				<a href="/vippy/features" title="Features">
+					<img src="/modules/vippy/images/note.png" align="left">
+					Features
+				</a>
+			</li>
+			<li class="mainmenu">
+				<a href="/vippy/costs" title="Subscription costs">
+					<img src="/modules/vippy/images/license.png" align="left">
+					Subscription
+				</a>
+			</li>
+			<li class="mainmenu">
+				<a href="/vippy/contact" title="Contact">
+					<img src="/modules/vippy/images/contact.png" align="left">
+					Contact
+				</a>
+			</li>
+		</ul>
+		<div style="clear:both;"></div>
 	</div>
 </div>
-{/if}
