@@ -1,12 +1,12 @@
 
 <div class="content">
+	<div style="padding: .5em;">
+		<h2>
+			<img src="/images/default/ui/marketdeliveries.png" align="left">
+			Subscription
+		</h2>
+	</div>
 	<div class="col6">
-		<div style="padding: .5em;">
-			<h2>
-				<img src="/images/default/ui/marketdeliveries.png" align="left">
-				Subscription
-			</h2>
-		</div>
 		<div style="padding: .5em;">
 			A subscription for Vippy is roughly <strong>10 milion ISK</strong> per (active) user, per month.
 		</div>
@@ -44,10 +44,7 @@
 		</div>
 	</div>
 	<div class="col5 right last">
-		<div style="padding: .5em;">
-			<h2>F.A.Q.</h2>
-		</div>
-		<div style="padding: 1em;">
+		<div style="padding: 1em; padding-top: 0;">
 			<h3>Why do you ask an ISK subscription</h3>
 			<div style="padding: .3em;">
 				Vippy requires servers to run on and servers are not free.
