@@ -1,7 +1,9 @@
+<b><u>VIPPY</u></b>
+ - I've setup a Vippy <a href="/vippy/contact" target="_blank">Discord</a> server. This should make it easier to contact me.
 
 <b><u>MAP</u></b>
  - Add special drifter icon on the map. Add/Edit drifters through the context menu on C5 or C6 wormholes.
- - Add 'rally point broadcast' function. Available via the system's context menu.
+ - Add 'rally point broadcast' function. Available via the context menu.
 
 
 
